--- a/code/process.env
+++ b/code/process.env
@@ -3,5 +3,9 @@ export {
   FACEBOOK:{
     clientID: '151149915295689',
     clientSecret: '8500fbc720dc52d3cd9f59b75f88daf1',
+  },
+  SPOTIFY:{
+    clientId: b21858ffed584a2cb27fa27b3148ec1f
+    client Secret: e15ad50d1a2c46faae5616430cf1b36d
   }
 }
