--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "hbs": "^4.0.0",
+    "lastfm": "^0.9.2",
     "less": "^2.7.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
