--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.0",
     "hbs": "^4.0.0",
     "lastfm": "^0.9.2",
     "less": "^2.7.1",
